passing URL instead of URI to HttpEntity.openInputStream